# CS336_assignments

./: .gitignore  README.md
assignment1-basics/cs336_basics/: bpe_train_test.ipynb  bpe_train_v0.ipynb  bpe_train_v1.ipynb  bpe_train_v1.py  pkl_reader.ipynb  textV1.txt  vocab.pkl
assignment1-basics/cs336_basics/Chap_2/: embedding.py  linear.py  rmsnorm.py  swiglu.py
assignment1-basics/cs336_basics/_minted-cs336_basics_note/: 0F06BFDEC20D0BE6136D52591A950449F99F33F066C5E039A69574E65433979F.pygtex
assignment1-basics/cs336_basics/cs336_basics_note/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.xdv  preamble.tex
assignment1-basics/cs336_basics/cs336_basics_note/_minted-main/: 016096F266E7677DC78B91F05AB42B90541C68F80C6A6F06151AFD63BAE50EBC.pygtex  0A1BDD085EBCD5EBA9B4614A4AB8A9D1589114A72FF8C8BC1B01852682525526.pygtex  0A6899EBB7FD2F22E0AE59E053A50927915858D6161727FC8421BD2BAE22FBDA.pygtex  0B3024AA41B662EEFDF7277E62A1DF5D589114A72FF8C8BC1B01852682525526.pygtex  113B980E8EA547EED6A0C3E75D0B27F9EBE515C6F385C182F5FF25B384DF7596.pygtex  1BFB78E70ECB09D80F36A69B4E1F8C46541C68F80C6A6F06151AFD63BAE50EBC.pygtex  29F244B2B11183732CBD3FB99CBB5EF2627F0E119DCF38D86EA268CD744AB745.pygtex  (+21 more)
assignment1-basics/cs336_basics/test_function/: bpe_trainer.py  scalene-profile.html  scalene-profile.json  tokenizer.py
assignment1-basics/fast_bpe/: Cargo.toml  pyproject.toml
assignment1-basics/fast_bpe/src/: lib.rs
assignment1-basics/tests/: adapters.py
tokenizer_outputs/: merges.pkl  merges_readable.txt  vocab.pkl  vocab_readable.txt
(+5 files in other folders)
