[package]
name = "fast_bpe"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_bpe"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
# rayon 用于潜在的并行计算（可选）
rayon = "1.8"
